Декоративные элементы для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -10,13 +10,14 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">
   <link href="css/normalize.css" rel="stylesheet">
+  <!--<link href="css/style.min.css" rel="stylesheet">-->
   <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page-body inner-page">
   <header class="main-header container main-header-inner-page">
     <nav class="main-navigation main-navigation-inner-page">
-      <a>
+      <a href="index.html">
         <img class="main-header-logo" src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
       </a>
 
@@ -135,7 +136,7 @@
                 <li class="filter-option  filter-checkbox">
                   <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="white"
                     id="filter-white">
-                  <label for="filter-black">Белый</label>
+                  <label for="filter-white">Белый</label>
                 </li>
                 <li class="filter-option  filter-checkbox">
                   <input class="visually-hidden filter-input-checkbox filter-input" checked type="checkbox"
@@ -170,7 +171,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="button button-filter-send" type="submit">Показать</button>
+            <button class="button button-filter-send" type="submit"><span>Показать</span></button>
           </form>
         </div>
 
@@ -222,7 +223,7 @@
                 </a>
                 <p class="item-price">1 100 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button">в корзину</button>
+              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
@@ -237,7 +238,7 @@
                 </a>
                 <p class="item-price">1 500 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button">в корзину</button>
+              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
@@ -252,7 +253,7 @@
                 </a>
                 <p class="item-price">1 500 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button">в корзину</button>
+              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
@@ -266,7 +267,7 @@
                 </a>
                 <p class="item-price">1 900 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button">в корзину</button>
+              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
@@ -307,7 +308,7 @@
     <div class="container">
       <div class="footer-first-level">
 
-        <a>
+        <a href="index.html">
           <img class="footer-logo" src="img/logo/logo_footer.svg" width="163" height="35" alt="Логотип «DEVICE»">
         </a>
 
