Декоративные элементы для каталога

--- a/catalog.html
+++ b/catalog.html
@@ -134,8 +134,8 @@
                   <label for="filter-black">Черный</label>
                 </li>
                 <li class="filter-option  filter-checkbox">
-                  <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="white"
-                    id="filter-white">
+                  <input disabled class="visually-hidden filter-input-checkbox filter-input" type="checkbox"
+                    name="white" id="filter-white">
                   <label for="filter-white">Белый</label>
                 </li>
                 <li class="filter-option  filter-checkbox">
@@ -223,7 +223,7 @@
                 </a>
                 <p class="item-price">1 100 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
+              <button class="button button-cart display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
@@ -238,7 +238,7 @@
                 </a>
                 <p class="item-price">1 500 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
+              <button class="button button-cart display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
@@ -253,11 +253,11 @@
                 </a>
                 <p class="item-price">1 500 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
+              <button class="button button-cart display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
-            <li class="catalog-item">
+            <li class="catalog-item catalog-item-new">
               <p>
                 <img src="img/item/item-4.png" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               </p>
@@ -267,7 +267,7 @@
                 </a>
                 <p class="item-price">1 900 руб.</p>
               </div>
-              <button class="button button-send display-none" type="button"><span>в корзину</span></button>
+              <button class="button button-cart display-none" type="button"><span>в корзину</span></button>
               <button class="button-compare display-none" type="button">Добавить к сравнению</button>
             </li>
 
