--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
   <main>
 
     <div class="slider container">
+
+      <div class="slider-toggles">
+        <button class="slider-toggle slider-toggle-active" type="button" aria-label="Первый слайд"></button>
+        <button class="slider-toggle" type="button" aria-label="Второй слайд"></button>
+        <button class="slider-toggle" type="button" aria-label="Третий слайд"></button>
+      </div>
+
+
       <ol class="slider-list">
+
         <li class="slide slide-1 slide-current">
           <img src="img/slide-1-selfie-stick.png" width="384" height="486" alt="Селфи-палка Бена Стиллера">
           <div class="slide-description">
@@ -149,12 +158,6 @@
           </div>
         </li>
       </ol>
-
-      <div class="slider-toggles">
-        <button class="slider-toggle slider-toggle-active" type="button" aria-label="Первый слайд"></button>
-        <button class="slider-toggle" type="button" aria-label="Второй слайд"></button>
-        <button class="slider-toggle" type="button" aria-label="Третий слайд"></button>
-      </div>
 
     </div>
 
@@ -365,20 +368,20 @@
     </div>
   </footer>
 
-  <section class="modal modal-feedback display-none">
+  <section class="modal modal-feedback">
     <h2 class="visually-hidden">Напишите нам</h2>
     <form class="modal-feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <p class="modal-feedback-item modal-first-level">
         <label class="name" for="name-surname">Ваше имя:</label>
-        <input class="input-name" type="text" id="name-surname" name="name" placeholder="Имя Фамилия">
+        <input required class="input-name" type="text" id="name-surname" name="name" placeholder="Имя Фамилия">
       </p>
       <p class="modal-feedback-item modal-first-level">
         <label class="email" for="e-mail">Ваш e-mail:</label>
-        <input class="input-email" type="email" id="e-mail" name="your-email" placeholder="email@example.com">
+        <input required class="input-email" type="email" id="e-mail" name="your-email" placeholder="email@example.com">
       </p>
       <p class="modal-feedback-item modal-second-level">
-        <label class="letter">Текст письма:</label>
-        <textarea class="input-letter" placeholder="В свободной форме"></textarea>
+        <label class="letter" for="textarea">Текст письма:</label>
+        <textarea required class="input-letter" id="textarea" placeholder="В свободной форме"></textarea>
       </p>
       <button class="button button-send" type="submit">отправить</button>
     </form>
@@ -387,7 +390,7 @@
 
 
 
-  <section class="modal modal-map display-none">
+  <section class="modal modal-map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473236!2d37.52742931550307!3d55.68703400453057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2s!4v1614558231352!5m2!1sru!2s"
