--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,8 @@
   <link rel="apple-touch-icon" href="img/icons/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">
-  <link href="css/normalize.css" rel="stylesheet">
-  <!--<link href="css/style.min.css" rel="stylesheet">-->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page-body inner-page">
