--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
       <div class="header-first-level">
 
-        <div class="search-wrapper">
-          <form class="search-button">
-            <input type="search" placeholder="Поиск по сайту">
-            <button type="submit">найти</button>
-          </form>
-        </div>
+
+        <form class="search-wrapper">
+          <label class="visually-hidden" for="search-button-input">Поле поиска</label>
+          <input type="search" name="search-input" id="search-button-input" placeholder="Поиск по сайту">
+          <button class="search-button" type="submit">найти</button>
+        </form>
+
 
         <ul class="header-site-navigation">
           <li>
